<resources>
    <string name="app_name">Login Demo</string>
    <!-- for login -->
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="btn_Login">Đăng nhập</string>
    <string name="btn_Register">Đăng ký</string>
    <string name="break_line">________________________ . ________________________</string>
    <string name="f_line">Bằng cách đăng nhập, bạn đã chấp nhận các điều khoản của dịch vụ chúng tôi để hiển hơn về các điều khoản</string>
    <string name="s_line">khoản</string>

    <string name="link">
        <![CDATA[
            <a href="https://youtube.com/">bấm vào đây</a>
        ]]>
    </string>
    <!-- end login -->

    <!-- for register -->
    <string name="dangky">Đăng Ký</string>
    <string name="dob">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="validate_date">dd/MM/yyyy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- end register -->

    <!-- for forgot password -->
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="Info">Quên mật khẩu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="confirm_pass">Xác nhận mật khẩu</string>
    <string name="change">Xác nhận</string>
    <string name="Logo_Name">Cuddle Home</string>
    <!-- end for forgot password -->
</resources>