<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="65dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="68dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/edtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mai"
        tools:srcCompat="@drawable/mai" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="370dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="372dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="368dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_Register"
        android:textColor="#070707"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtBreakLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btnForgotPassWord"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        app:cornerRadius="8dp"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtBreakLine"
        android:layout_width="385dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/break_line"
        app:layout_constraintBottom_toTopOf="@+id/txtFline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/txtFline"
        android:layout_width="379dp"
        android:layout_height="36dp"
        android:text="@string/f_line"
        app:layout_constraintBottom_toTopOf="@+id/txtLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBreakLine" />

    <TextView
        android:id="@+id/txtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="91dp"
        android:text="@string/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtFline"
        app:layout_constraintTop_toBottomOf="@+id/txtFline" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="86dp"
        android:fontFamily="@font/dancing_script"
        android:lineSpacingExtra="8sp"
        android:text="@string/Logo_Name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FAF6F6"
        android:text="@string/btn_Login"
        android:textColor="#000000"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegister"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>